test/files/neg/t2336.check
t2336.scala:6: error: type Foo[Int] is not a stable prefix
  new Foo[Int]#Bar(0)
               ^
one error found
